# img_rec

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/demo/: load_demo.ipynb  recon_train.ipynb  speckle_demo.ipynb
notebooks/exploration/: mnist_exp.ipynb
notebooks/simulation/: npz_open.ipynb  original.ipynb  speckle_demo.ipynb
src/: config.py  train.py  trainer.py
src/dataset/: process.py  speckle_pred.py
src/models/: GIDC.py  common.py  linear.py  unet_ad.py
src/utils/: inv_recon.py  utils.py
